--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # .gitignore for Grails 1.2 and 1.3
 
 # web application files
-/web-app/WEB-INF
+#/web-app/WEB-INF
 
 # IDE support files
 /.classpath
@@ -15,6 +15,7 @@
 
 # default HSQL database files for production mode
 /prodDb.*
+/devDb.*
 
 # general HSQL database files
 *Db.properties
